workspace-sf/force-app/main/default/objects/ServicoTributavel__mdt/ServicoTributavel__mdt.object-meta.xml
<CustomObject>
    <description>Metadado com os códigos de serviços tributáveis para pessoa física e jurídica</description>
    <label>Serviço Tributável</label>
    <pluralLabel>Serviços Tributáveis</pluralLabel>
</CustomObject>