workspace-sf/force-app/main/default/objects/ServicoTributavel__mdt/fields/CodigoServico__c.field-meta.xml
<CustomField>
    <fullName>CodigoServico__c</fullName>
    <label>Código do Serviço</label>
    <length>255</length>
    <type>Text</type>
</CustomField>