workspace-sf/force-app/main/default/objects/ServicoTributavel__mdt/fields/Servico__c.field-meta.xml
<CustomField>
    <fullName>Servico__c</fullName>
    <label>Serviço</label>
    <length>255</length>
    <type>Text</type>
</CustomField>