workspace-sf/force-app/main/default/objects/ServicoTributavel__mdt/fields/TipoPessoa__c.field-meta.xml
<CustomField>
    <fullName>TipoPessoa__c</fullName>
    <label>Tipo de Pessoa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Física</fullName>
                <default>true</default>
                <label>Física</label>
            </value>
            <value>
                <fullName>Jurídica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>